<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_1"
        app:cardCornerRadius="@dimen/card_corner_radius_dp_5">

    <LinearLayout
            android:orientation="horizontal"
            android:padding="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_icon">
            <TextView
                    android:text="@string/unblock_label"
                    android:layout_height="wrap_content"
                    android:id="@+id/unblock"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="@dimen/dp_8"
                    android:drawableTop="@drawable/ic_block"
                    android:layout_width="wrap_content"/>
        </LinearLayout>
        <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8">

            <TextView
                    android:hint="@string/block_purpose_hint"
                    android:textColorHint="@color/black"
                    android:fontFamily="@font/roboto"
                    android:drawablePadding="@dimen/dp_16"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:id="@+id/block_purpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:drawablePadding="@dimen/dp_8"
                    android:textColor="@color/sub_item_text_color"
                    android:textColorHint="@color/sub_item_text_color"
                    android:textSize="@dimen/sp_12"
                    android:id="@+id/block_conferenceRoomName"
                    android:drawableStart="@drawable/ic_room_resized"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/room_location_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <TextView
                        android:drawablePadding="@dimen/dp_8"
                        android:textColor="@color/sub_item_text_color"
                        android:textColorHint="@color/sub_item_text_color"
                        android:textSize="@dimen/sp_12"
                        android:id="@+id/block_date"
                        android:drawableStart="@drawable/ic_today_resized"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginTop="@dimen/dp_8"
                        android:hint="@string/date_hint"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/block_from_time"
                        android:drawablePadding="@dimen/dp_8"
                        android:textColor="@color/sub_item_text_color"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="@dimen/sp_12"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_time_dashboard"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="@string/start_end_time_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

