<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        tools:context=".Activity.AddingBuilding">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/building_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:errorEnabled="true"
                android:focusableInTouchMode="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_building_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTintMode="@color/white"
                    android:maxLines="1"
                    android:drawableStart="@drawable/ic_building_black_24dp"
                    android:drawablePadding="5dp"
                    android:maxLength="20"
                    android:textColor="@color/textColorGray"
                    android:hint="@string/building_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                android:focusableInTouchMode="true"
                android:background="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_building_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="20"
                    android:inputType="text"
                    android:hint="@string/location"
                    android:textColor="@color/textColorGray"
                    android:drawableStart="@drawable/ic_room_black_24dp"
                    android:drawablePadding="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:id="@+id/button_add_building"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADD"
                android:layout_marginTop="20dp"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>







