<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:layout_marginTop="5dp"
        android:paddingRight="20dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/block_from_time_layout"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fromTime_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/textColorGray"
                    android:editable="false"
                    android:maxLines="1"
                    android:focusable="false"
                    android:drawableStart="@drawable/ic_schedule_black_24dp"
                    android:drawablePadding="5dp"
                    android:maxLength="50"
                    android:hint="@string/start_time"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/block_to_time_layout"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/toTime_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorGray"
                    android:ems="10"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="text"
                    android:hint="@string/end_time"
                    android:drawableStart="@drawable/ic_schedule_black_24dp"
                    android:drawablePadding="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/block_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/textColorGray"
                android:focusable="false"
                android:id="@+id/date_block"
                android:hint="Date"
                android:drawableStart="@drawable/ic_today_black_24dp"
                android:drawablePadding="5dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
            android:id="@+id/buiding_Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:drawablePadding="5dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/spinner_rect"/>
    <TextView
            android:id="@+id/error_spinner_building_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ba160c"
            android:visibility="invisible"
            android:layout_marginStart="11dp"
            android:textSize="12sp"
            android:text="Select building"/>


    <Spinner
            android:id="@+id/conference_Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:drawablePadding="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_rect"/>
    <TextView
            android:id="@+id/error_spinner_room_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error_color"
            android:visibility="invisible"
            android:layout_marginStart="11dp"
            android:textSize="12sp"
            android:text="@string/Select_Room"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/purpose_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="11dp"
            app:errorEnabled="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Purpose"
                android:textColor="@color/textColorGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_local_offer_black_24dp"
                android:drawablePadding="5dp"
                android:maxLength="50"
                android:hint="@string/reason"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/block_conference"
            android:text="@string/block"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>





